--- a/MenuExplorer-server/src/main/resources/application.properties
+++ b/MenuExplorer-server/src/main/resources/application.properties
@@ -1,3 +1,14 @@
 menuPath=maxmenu.json
 allergenPath=allergens.json
-modelPath=glove.2024.wikigiga.50d.zip
+modelPath=glove.2024.wikigiga.100d.zip
+apiKeys=apikeys.txt
+
+
+
+
+
+server.port=8443
+server.ssl.key-store=keystore.p12
+server.ssl.key-store-password=testdev
+server.ssl.key-store-type=PKCS12
+server.ssl.key-alias=menuexplorer
