--- a/MenuExplorer-server/pom.xml
+++ b/MenuExplorer-server/pom.xml
@@ -5,23 +5,25 @@
 	<parent>
 		<groupId>teneo</groupId>
 		<artifactId>MenuExplorer</artifactId>
-		<version>1.1.0</version>
+		<version>2.0.0</version>
 	</parent>
 
 	<artifactId>menuexplorer-server</artifactId>
 	<packaging>jar</packaging>
 
 	<dependencies>
-		<!-- Spring Core Dependencies -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot</artifactId>
-			<version>2.7.18</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-autoconfigure</artifactId>
-			<version>2.7.18</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -35,8 +37,12 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-web</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<scope>provided</scope>
+		</dependency>
 
-		<!-- Deep Learning Dependencies -->
 		<dependency>
 			<groupId>org.deeplearning4j</groupId>
 			<artifactId>deeplearning4j-nlp</artifactId>
@@ -44,18 +50,25 @@
 		</dependency>
 		<dependency>
 			<groupId>org.nd4j</groupId>
+			<artifactId>nd4j-native-platform</artifactId>
+			<version>1.0.0-M2.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.nd4j</groupId>
 			<artifactId>nd4j-api</artifactId>
 			<version>1.0.0-M2.1</version>
 		</dependency>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+		</dependency>
 
-		<!-- JSON Processing -->
+
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
-			<version>2.9.1</version>
 		</dependency>
 	</dependencies>
-
 
 	<build>
 		<plugins>
